Correct vertical spacing.

--- a/css/core.less
+++ b/css/core.less
@@ -188,7 +188,7 @@ a {
   padding-top:10px;
   padding-bottom:10px;
   #percentage > .padding-horizontal(10, 220); //TODO:  mobile grid
-  margin-bottom:20px;
+  margin-bottom:30px;
 }
 .type-1 .nav {
   padding-left:0;
